--- a/index8.html
+++ b/index8.html
@@ -8,7 +8,7 @@
 <body>
 
     <p id="text1">this is project 8</p>
-    <p id="text2"></p>
+    <p id="text2">my name is jitender</p>
     <p id="text3"></p>
     <p id="text4"></p>
     <p id="text5"></p>
